--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
       </section>
 
       <!-- ------------------- Wishlist Section -------------------- -->
-      <section class="wishlist" style="display: none">
+      <section class="wishlist_bottom">
         <div class="container">
           <div class="wishlist_content">
             <div class="wishlist_title">
@@ -908,7 +908,68 @@
 
       <!-- ------------------- Footer -------------------- -->
 
-      <!-- ------------------- Copyright -------------------- -->
+      <footer class="footer">
+        <div class="container">
+          <div class="footer_content">
+            <div class="left_part">
+              <img src="assets/images/footer-logo.png" alt="" />
+              <p>
+                MeetingTime.is: Where Innovation Meets Precision in Every Moment
+              </p>
+
+              <div class="socials">
+                <a href=""><i class="fa-brands fa-google"></i></a>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+              </div>
+            </div>
+
+            <div class="right_part">
+              <div class="part_one">
+                <h4>Product</h4>
+
+                <a href="">Features</a>
+                <a href="">Integration</a>
+                <a href="">Documentation</a>
+                <a href="">Referral Program</a>
+                <a href="">Pricing</a>
+              </div>
+
+              <div class="part_two">
+                <h4>Company</h4>
+
+                <a href="">About</a>
+                <a href="">Terms</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Careers</a>
+              </div>
+
+              <div class="part_three">
+                <h4>Resources</h4>
+
+                <a href="">Documentation</a>
+                <a href="">License</a>
+                <a href="">Changelog</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+       <div class="container">
+         <!-- ------------------- Copyright -------------------- -->
+
+         <div class="copyright">
+           <div class="copyright-left">
+             <p>© MeetingTime.is 2024, All Rights Reserved</p>
+           </div>
+ 
+           <div class="copyright-right">
+             <a href="">Support</a>
+             <a href="">Privacy</a>
+           </div>
+         </div>
+       </div>
+      </footer>
     </div>
 
     <!-- Swiper JS -->
