--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
+    <!-- Slider -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <!-- Font Awesome Icons -->
     <link
       rel="stylesheet"
@@ -29,7 +35,6 @@
     />
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
   </head>
   <body>
     <div class="main">
@@ -373,203 +378,216 @@
               <h2 class="review_subtitle">What Our Client Say About Us</h2>
             </div>
 
+            <!-- Desktop -->
             <div class="client_feedback">
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+              <div class="review__list swiper">
+                <div class="review__list-up swiper slide-up">
+                  <div class="swiper-wrapper">
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
-                  </div>
-                </div>
-              </div>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
 
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
-                  </div>
-                </div>
-              </div>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
 
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
-                  </div>
-                </div>
-              </div>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
 
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
-
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
-
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
-
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
 
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+              <div class="review__list swiper">
+                <div class="review__list-down swiper">
+                  <div class="swiper-wrapper">
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
-                  </div>
-                </div>
-              </div>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
 
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
-                  </div>
-                </div>
-              </div>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
 
-              <div class="feedback_container">
-                <div class="quotes">
-                  <img src="assets/images/quotes.png" alt="" />
-                </div>
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
 
-                <div class="feedback">
-                  <p>
-                    Creative geniuses who listen, understand, and craft
-                    captivating visuals - an agency that truly understands our
-                    needs.
-                  </p>
-                </div>
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
 
-                <div class="client_details">
-                  <div class="client_img">
-                    <img src="assets/images/client-1.png" alt="" />
-                  </div>
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
 
-                  <div class="client_name_position">
-                    <h5 class="name">Gabrielle Williams</h5>
-                    <p class="position">CEO & Founder of ABC</p>
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -955,25 +973,25 @@
           </div>
         </div>
 
-       <div class="container">
-         <!-- ------------------- Copyright -------------------- -->
+        <div class="container">
+          <!-- ------------------- Copyright -------------------- -->
 
-         <div class="copyright">
-           <div class="copyright-left">
-             <p>© MeetingTime.is 2024, All Rights Reserved</p>
-           </div>
- 
-           <div class="copyright-right">
-             <a href="">Support</a>
-             <a href="">Privacy</a>
-           </div>
-         </div>
-       </div>
+          <div class="copyright">
+            <div class="copyright-left">
+              <p>© MeetingTime.is 2024, All Rights Reserved</p>
+            </div>
+
+            <div class="copyright-right">
+              <a href="">Support</a>
+              <a href="">Privacy</a>
+            </div>
+          </div>
+        </div>
       </footer>
     </div>
 
     <!-- Swiper JS -->
-    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="assets/js/main.js"></script>
