--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <a href="#">
                   <img
                     class="nav__logo"
-                    src="assets/images/logo.png"
+                    src="assets/images/main-logo.png"
                     alt="MeetingTime.ls"
                   />
                 </a>
@@ -122,15 +122,17 @@
               </ul>
             </nav>
 
-            <button
-              class="nav-open-btn"
-              aria-label="open menu"
-              data-nav-toggler
-            >
-              <i class="fa-solid fa-bars"></i>
-            </button>
+            <div class="mobile-version">
+              <a href="contact.html" class="start-btn">Get Started </a>
 
-            <a href="contact.html" class="start-btn">Get Started </a>
+              <button
+                class="nav-open-btn"
+                aria-label="open menu"
+                data-nav-toggler
+              >
+                <i class="fa-solid fa-bars"></i>
+              </button>
+            </div>
 
             <div class="overlay" data-nav-toggler data-overlay></div>
           </div>
@@ -942,33 +944,31 @@
               </div>
             </div>
 
-            <div class="right_part">
-              <div class="part_one">
-                <h4>Product</h4>
+            <div class="part_one">
+              <h4>Product</h4>
 
-                <a href="">Features</a>
-                <a href="">Integration</a>
-                <a href="">Documentation</a>
-                <a href="">Referral Program</a>
-                <a href="">Pricing</a>
-              </div>
+              <a href="">Features</a>
+              <a href="">Integration</a>
+              <a href="">Documentation</a>
+              <a href="">Referral Program</a>
+              <a href="">Pricing</a>
+            </div>
 
-              <div class="part_two">
-                <h4>Company</h4>
+            <div class="part_two">
+              <h4>Company</h4>
 
-                <a href="">About</a>
-                <a href="">Terms</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Careers</a>
-              </div>
+              <a href="">About</a>
+              <a href="">Terms</a>
+              <a href="">Privacy Policy</a>
+              <a href="">Careers</a>
+            </div>
 
-              <div class="part_three">
-                <h4>Resources</h4>
+            <div class="part_three">
+              <h4>Resources</h4>
 
-                <a href="">Documentation</a>
-                <a href="">License</a>
-                <a href="">Changelog</a>
-              </div>
+              <a href="">Documentation</a>
+              <a href="">License</a>
+              <a href="">Changelog</a>
             </div>
           </div>
         </div>
