--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                   >
                 </li>
               </ul>
+
+              
+            <a href="contact.html" class="start-btn-mobile">Get Started </a>
             </nav>
 
             <div class="mobile-version">
