--- a/index.html
+++ b/index.html
@@ -97,36 +97,27 @@
                 </li>
 
                 <li class="navbar-item">
-                  <a href="about.html" class="navbar-link" data-nav-link
-                    >About</a
-                  >
+                  <a href="" class="navbar-link" data-nav-link>About</a>
                 </li>
 
                 <li class="navbar-item">
-                  <a href="gallery.html" class="navbar-link" data-nav-link
-                    >Benefits</a
-                  >
+                  <a href="" class="navbar-link" data-nav-link>Benefits</a>
                 </li>
 
                 <li class="navbar-item">
-                  <a href="careers.html" class="navbar-link" data-nav-link
-                    >Solutions</a
-                  >
+                  <a href="" class="navbar-link" data-nav-link>Solutions</a>
                 </li>
 
                 <li class="navbar-item">
-                  <a href="contact.html" class="navbar-link" data-nav-link
-                    >Contact</a
-                  >
+                  <a href="" class="navbar-link" data-nav-link>Contact</a>
                 </li>
               </ul>
 
-              
-            <a href="contact.html" class="start-btn-mobile">Get Started </a>
+              <a href="" class="start-btn-mobile">Get Started </a>
             </nav>
 
             <div class="mobile-version">
-              <a href="contact.html" class="start-btn">Get Started </a>
+              <a href="" class="start-btn">Get Started </a>
 
               <button
                 class="nav-open-btn"
