--- a/index.html
+++ b/index.html
@@ -374,11 +374,84 @@
               <h2 class="review_subtitle">What Our Client Say About Us</h2>
             </div>
 
-            <!-- Desktop -->
             <div class="client_feedback">
               <div class="review__list swiper">
                 <div class="review__list-up swiper slide-up">
                   <div class="swiper-wrapper">
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
                     <div class="review__list-box swiper-slide">
                       <div class="quotes">
                         <img src="assets/images/quotes.png" alt="" />
@@ -479,6 +552,8 @@
                       </div>
                     </div>
                   </div>
+
+                  <div class="swiper-pagination"></div>
                 </div>
               </div>
 
@@ -534,6 +609,108 @@
                         </div>
                       </div>
                     </div>
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="review__list-box swiper-slide">
+                      <div class="quotes">
+                        <img src="assets/images/quotes.png" alt="" />
+                      </div>
+
+                      <div class="feedback">
+                        <p>
+                          Creative geniuses who listen, understand, and craft
+                          captivating visuals - an agency that truly understands
+                          our needs.
+                        </p>
+                      </div>
+
+                      <div class="client_details">
+                        <div class="client_img">
+                          <img src="assets/images/client-1.png" alt="" />
+                        </div>
+
+                        <div class="client_name_position">
+                          <h5 class="name">Gabrielle Williams</h5>
+                          <p class="position">CEO & Founder of ABC</p>
+                        </div>
+                      </div>
+                    </div>
+                    
 
                     <div class="review__list-box swiper-slide">
                       <div class="quotes">
