client cycle running

--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
       </header>
 
       <!-- ------------------- Hero Section -------------------- -->
-
-      <srction class="home" id="home">
+<srction class="home" id="home">
         <div class="container">
           <div class="home_content">
             <div class="home_title">
@@ -165,11 +164,11 @@
             </div>
           </div>
         </div>
-      </srction>
+      </srction> 
 
       <!-- ------------------- Date Section -------------------- -->
 
-      <section class="date">
+    <section class="date">
         <div class="container">
           <div class="date_content">
             <div class="date_top flex-between">
@@ -358,13 +357,60 @@
       <section class="client_cycle">
         <div class="container">
           <div class="cycle_content">
-            <h1>Client Cycle</h1>
+            <div class="round_circle">
+              <div class="circle_box">
+                <div class="top_box">
+                  <div class="box">
+                    <h3 class="number">1</h3>
+
+                    <h3 class="box_title">Account Balance</h3>
+
+                    <p>
+                      Payment is handled automatically, Client put money on
+                      account and refill
+                    </p>
+                  </div>
+                </div>
+
+                <div class="center_box">
+                  <div class="box">
+                    <h3 class="number">1</h3>
+
+                    <h3 class="box_title">Account Balance</h3>
+
+                    <p>
+                      Payment is handled automatically, Client put money on
+                      account and refill
+                    </p>
+                  </div>
+
+                  <div class="box">
+                    <h3 class="box_title">Client Cycle</h3>
+                  </div>
+
+                  <div class="box">
+                    <h3 class="number">1</h3>
+
+                    <h3 class="box_title">Account Balance</h3>
+
+                    <p>
+                      Payment is handled automatically, Client put money on
+                      account and refill
+                    </p>
+                  </div>
+                </div>
+
+                <div class="bottom_box">
+
+                  
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- ------------------- Review Section -------------------- -->
-
       <section class="review">
         <div class="container">
           <div class="review_content">
@@ -635,7 +681,6 @@
                       </div>
                     </div>
 
-
                     <div class="review__list-box swiper-slide">
                       <div class="quotes">
                         <img src="assets/images/quotes.png" alt="" />
@@ -710,7 +755,6 @@
                         </div>
                       </div>
                     </div>
-                    
 
                     <div class="review__list-box swiper-slide">
                       <div class="quotes">
@@ -767,7 +811,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> 
 
       <!-- ------------------- Benefits Section -------------------- -->
 
@@ -853,7 +897,7 @@
 
       <!-- ------------------- Problem & Solution Section -------------------- -->
 
-      <section class="ps">
+     <section class="ps">
         <div class="container">
           <div class="ps_content">
             <div class="ps_headings">
@@ -917,7 +961,7 @@
 
       <!-- ------------------- Question Section -------------------- -->
 
-      <section class="accordion_section">
+    <section class="accordion_section">
         <div class="container">
           <div class="accordion_container">
             <div class="accordion_headings">
