--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
       <!-- ------------------- client cycle Section -------------------- -->
 
-      <section class="client_cycle">
+      <!-- <section class="client_cycle">
         <div class="container">
           <div class="cycle_content">
             <div class="round_circle">
@@ -408,7 +408,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- ------------------- Review Section -------------------- -->
       <section class="review">
