client circle running

--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
 
       <!-- ------------------- client cycle Section -------------------- -->
 
-      <!-- <section class="client_cycle">
+      <section class="client_cycle">
         <div class="container">
           <div class="cycle_content">
             <div class="round_circle">
               <div class="circle_box">
-                <div class="top_box">
+                <!-- <div class="top_box">
                   <div class="box">
                     <h3 class="number">1</h3>
 
@@ -403,12 +403,12 @@
                 <div class="bottom_box">
 
                   
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- ------------------- Review Section -------------------- -->
       <section class="review">
