--- a/index.html
+++ b/index.html
@@ -357,53 +357,57 @@
       <section class="client_cycle">
         <div class="container">
           <div class="cycle_content">
-            <div class="round_circle">
-              <div class="circle_box">
-                <!-- <div class="top_box">
-                  <div class="box">
-                    <h3 class="number">1</h3>
+            <div class="cycle_box">
+              <div class="box box_1">
+               <h3 class="number">1</h3>
 
-                    <h3 class="box_title">Account Balance</h3>
+               <h3 class="box_title">Account Balance</h3>
 
-                    <p>
-                      Payment is handled automatically, Client put money on
-                      account and refill
-                    </p>
-                  </div>
-                </div>
+               <p> Payment is handled automatically, Client put money on account and refill</p>
+              </div>
 
-                <div class="center_box">
-                  <div class="box">
-                    <h3 class="number">1</h3>
+              <div class="arrow_1">
+                <img src="assets/images/c-1.png" alt="">
+              </div>
 
-                    <h3 class="box_title">Account Balance</h3>
+              <div class="box box_2">
+                <h3 class="number">2</h3>
 
-                    <p>
-                      Payment is handled automatically, Client put money on
-                      account and refill
-                    </p>
-                  </div>
+               <h3 class="box_title">Self Scheduling</h3>
 
-                  <div class="box">
-                    <h3 class="box_title">Client Cycle</h3>
-                  </div>
+               <p> Schedules come in with ease, Based on your scheduling rules, integrating with your
+                existing calendars</p>
+              </div>
 
-                  <div class="box">
-                    <h3 class="number">1</h3>
+              <div class="arrow_2">
+                <img src="assets/images/c-2.png" alt="">
+              </div>
+              
+              <h2 class="text-gardinets">Client Cycle</h2>
 
-                    <h3 class="box_title">Account Balance</h3>
+              <div class="box box_3">
+                <h3 class="number">3</h3>
 
-                    <p>
-                      Payment is handled automatically, Client put money on
-                      account and refill
-                    </p>
-                  </div>
-                </div>
+                <h3 class="box_title">Meeting Focus</h3>
+ 
+                <p> Your phone and status will respond that you are in a meeting with your next available
+                  slot</p>
+              </div>
 
-                <div class="bottom_box">
+              <div class="arrow_3">
+                <img src="assets/images/c-3.png" alt="">
+              </div>
 
-                  
-                </div> -->
+              <div class="box box_4">
+                <h3 class="number">4</h3>
+
+               <h3 class="box_title">Minute by Minute Tracking</h3>
+
+               <p>Every minute you spend on the phone, desktop or face to face is tracked</p>
+              </div>
+
+              <div class="arrow_4">
+                <img src="assets/images/c-4.png" alt="">
               </div>
             </div>
           </div>
