--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
               </div>
 
               <div class="arrow_1">
-                <img src="assets/images/c-1.png" alt="">
+                <img class="pc" src="assets/images/c-1.png" alt="">
+                <img class="mobile" src="assets/images/mobile-1.png" alt="">
               </div>
 
               <div class="box box_2">
@@ -380,7 +381,8 @@
               </div>
 
               <div class="arrow_2">
-                <img src="assets/images/c-2.png" alt="">
+                <img class="pc" src="assets/images/c-2.png" alt="">
+                <img class="mobile" src="assets/images/mobile-2.png" alt="">
               </div>
               
               <h2 class="text-gardinets">Client Cycle</h2>
@@ -395,7 +397,8 @@
               </div>
 
               <div class="arrow_3">
-                <img src="assets/images/c-3.png" alt="">
+                <img class="pc" src="assets/images/c-3.png" alt="">
+                <img class="mobile" src="assets/images/mobile-3.png" alt="">
               </div>
 
               <div class="box box_4">
@@ -407,7 +410,8 @@
               </div>
 
               <div class="arrow_4">
-                <img src="assets/images/c-4.png" alt="">
+                <img class="pc" src="assets/images/c-4.png" alt="">
+                <img class="mobile" src="assets/images/mobile-4.png" alt="">
               </div>
             </div>
           </div>
