--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </header>
 
       <!-- ------------------- Hero Section -------------------- -->
-<srction class="home" id="home">
+      <srction class="home" id="home">
         <div class="container">
           <div class="home_content">
             <div class="home_title">
@@ -153,7 +153,11 @@
             </div>
 
             <div class="home_btn">
-              <a href="" class="btn">
+              <a
+                target="_blank"
+                href="https://forms.clickup.com/9005081633/f/8cbx911-3674/RPMLEWZHPFAEDPR0A1"
+                class="btn"
+              >
                 <span>Join The Waitlist Now</span>
                 <i class="fa-solid fa-arrow-right"></i>
               </a>
@@ -164,11 +168,11 @@
             </div>
           </div>
         </div>
-      </srction> 
+      </srction>
 
       <!-- ------------------- Date Section -------------------- -->
 
-    <section class="date">
+      <section class="date">
         <div class="container">
           <div class="date_content">
             <div class="date_top flex-between">
@@ -343,7 +347,11 @@
             </div>
 
             <div class="wishlist_btn">
-              <a href="" class="btn">
+              <a
+                target="_blank"
+                href="https://forms.clickup.com/9005081633/f/8cbx911-3674/RPMLEWZHPFAEDPR0A1"
+                class="btn"
+              >
                 <span>Join The Waitlist Now</span>
                 <i class="fa-solid fa-arrow-right"></i>
               </a>
@@ -359,59 +367,69 @@
           <div class="cycle_content">
             <div class="cycle_box">
               <div class="box box_1">
-               <h3 class="number">1</h3>
+                <h3 class="number">1</h3>
 
-               <h3 class="box_title">Account Balance</h3>
+                <h3 class="box_title">Account Balance</h3>
 
-               <p> Payment is handled automatically, Client put money on account and refill</p>
+                <p>
+                  Payment is handled automatically, Client put money on account
+                  and refill
+                </p>
               </div>
 
               <div class="arrow_1">
-                <img class="pc" src="assets/images/c-1.png" alt="">
-                <img class="mobile" src="assets/images/mobile-1.png" alt="">
+                <img class="pc" src="assets/images/c-1.png" alt="" />
+                <img class="mobile" src="assets/images/mobile-1.png" alt="" />
               </div>
 
               <div class="box box_2">
                 <h3 class="number">2</h3>
 
-               <h3 class="box_title">Self Scheduling</h3>
+                <h3 class="box_title">Self Scheduling</h3>
 
-               <p> Schedules come in with ease, Based on your scheduling rules, integrating with your
-                existing calendars</p>
+                <p>
+                  Schedules come in with ease, Based on your scheduling rules,
+                  integrating with your existing calendars
+                </p>
               </div>
 
               <div class="arrow_2">
-                <img class="pc" src="assets/images/c-2.png" alt="">
-                <img class="mobile" src="assets/images/mobile-2.png" alt="">
+                <img class="pc" src="assets/images/c-2.png" alt="" />
+                <img class="mobile" src="assets/images/mobile-2.png" alt="" />
               </div>
-              
+
               <h2 class="text-gardinets">Client Cycle</h2>
 
               <div class="box box_3">
                 <h3 class="number">3</h3>
 
                 <h3 class="box_title">Meeting Focus</h3>
- 
-                <p> Your phone and status will respond that you are in a meeting with your next available
-                  slot</p>
+
+                <p>
+                  Your phone and status will respond that you are in a meeting
+                  with your next available slot
+                </p>
               </div>
 
               <div class="arrow_3">
-                <img class="pc" src="assets/images/c-3.png" alt="">
-                <img class="mobile" src="assets/images/mobile-3.png" alt="">
+                <img class="pc" src="assets/images/c-3.png" alt="" />
+                <img class="mobile" src="assets/images/mobile-3.png" alt="" />
               </div>
 
               <div class="box box_4">
                 <h3 class="number">4</h3>
 
-               <h3 class="box_title">Minute by Minute Tracking</h3>
+                <h3 class="box_title">Minute by Minute Tracking</h3>
 
-               <p>Every minute you spend on the phone, desktop or face to face is tracked</p>
+                <p>
+                  Every minute you spend on the phone, desktop or face to face
+                  is tracked
+                </p>
               </div>
 
               <div class="arrow_4">
-                <img class="pc" src="assets/images/c-4.png" alt="">
-                <img class="mobile" src="assets/images/mobile-4.png" alt="">
+                <img class="pc" src="assets/images/c-4.png" alt="" />
+                <img class="mobile" src="assets/images/mobile-4.png" alt="" />
               </div>
             </div>
           </div>
@@ -819,7 +837,7 @@
             </div>
           </div>
         </div>
-      </section> 
+      </section>
 
       <!-- ------------------- Benefits Section -------------------- -->
 
@@ -893,7 +911,11 @@
               </div>
 
               <div class="wishlist_btn">
-                <a href="" class="btn">
+                <a
+                  target="_blank"
+                  href="https://forms.clickup.com/9005081633/f/8cbx911-3674/RPMLEWZHPFAEDPR0A1"
+                  class="btn"
+                >
                   <span>Join The Waitlist Now</span>
                   <i class="fa-solid fa-arrow-right"></i>
                 </a>
@@ -905,7 +927,7 @@
 
       <!-- ------------------- Problem & Solution Section -------------------- -->
 
-     <section class="ps">
+      <section class="ps">
         <div class="container">
           <div class="ps_content">
             <div class="ps_headings">
@@ -969,7 +991,7 @@
 
       <!-- ------------------- Question Section -------------------- -->
 
-    <section class="accordion_section">
+      <section class="accordion_section">
         <div class="container">
           <div class="accordion_container">
             <div class="accordion_headings">
@@ -1140,7 +1162,11 @@
             </div>
 
             <div class="white_btn">
-              <a href="" class="btn">
+              <a
+                target="_blank"
+                href="https://forms.clickup.com/9005081633/f/8cbx911-3674/RPMLEWZHPFAEDPR0A1"
+                class="btn"
+              >
                 <span>Join The Waitlist Now</span>
                 <i class="fa-solid fa-arrow-right"></i>
               </a>
