get started btn link add

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                 </li>
               </ul>
 
-              <a href="" class="start-btn-mobile">Get Started </a>
+              <a target="_blank" href="https://forms.clickup.com/9005081633/f/8cbx911-3674/RPMLEWZHPFAEDPR0A1" class="start-btn-mobile">Get Started </a>
             </nav>
 
             <div class="mobile-version">
-              <a href="" class="start-btn">Get Started </a>
+              <a target="_blank" href="https://forms.clickup.com/9005081633/f/8cbx911-3674/RPMLEWZHPFAEDPR0A1" class="start-btn">Get Started </a>
 
               <button
                 class="nav-open-btn"
